--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,13 @@ section {
 	color: #fff;
 	padding: 1rem;
 	margin-top: 2rem;
+	text-align: center;
+}
+.portfolio-item  img{
+	margin-bottom: 1rem;
+}
+.portfolio-item .btn {
+	margin: .5rem;
 }
 #contact {
 	background-color: #f4f4f4;
