--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,12 @@
 html, body {
 	height: 100%;
+	font-family: 'Roboto Condensed', sans-serif;
+}
+h1, h2 {
+	font-family: 'Cantata One', serif;
+}
+h3, h4, h5, h6 {
+	font-family: 'Oswald', sans-serif;
 }
 section {
 	min-height: 100%;
@@ -10,6 +17,11 @@ section {
 	border-color: #f05f40;
 	border-width: .5rem;
 	max-width: 300px;
+}
+.btn {
+	font-family: 'Oswald', sans-serif;
+	font-size: 1.6rem;
+	border-radius: 2px;
 }
 #space-alert {
 	position: fixed;
@@ -37,7 +49,9 @@ section {
 	font-size: 2rem;
 	text-transform: uppercase;
 	border-radius: 1rem;
-	padding: .6rem;
+	padding: .8rem;
+	font-family: 'Oswald', sans-serif;
+	border-radius: 3px;
 }
 .btn-primary-giant {
 	background-color: #f05f40;
@@ -46,7 +60,9 @@ section {
 	font-size: 2.5rem;
 	text-transform: uppercase;
 	border-radius: 1rem;
-	padding: .6rem;
+	padding: .8rem;
+	font-family: 'Oswald', sans-serif;
+	border-radius: 3px;
 }
 .main-title {
 	color: #fff;
@@ -57,7 +73,7 @@ section {
 }
 #top p {
 	color: #eee;
-	font-size: 1.8rem;
+	font-size: 2.2rem;
 }
 .secondary-title {
 	text-transform: uppercase;
@@ -130,12 +146,12 @@ section {
 .portfolio-item {
 	background-color: #444;
 	color: #fff;
-	padding: 1rem;
+	padding: 1.5rem 1.5rem 2rem 1.5rem;
 	margin-top: 2rem;
 	text-align: center;
 }
 .portfolio-item  img{
-	margin-bottom: 1rem;
+	margin: 1.8rem 0;
 }
 .portfolio-item .btn {
 	margin: .5rem;
@@ -172,6 +188,7 @@ footer {
 	display: inline-block;
 	padding: 1rem;
 	text-transform: uppercase;
+	font-family: 'Oswald', sans-serif;
 }
 #navbar li:hover {
 	background-color: #444;
