--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,23 @@ h1, h2 {
 h3, h4, h5, h6 {
 	font-family: 'Oswald', sans-serif;
 }
+.form-control {
+	resize: none;
+	border-radius: 2px;
+	background: transparent;
+	border: none;
+	box-shadow: none;
+	border-bottom: solid 1px #ccc;
+	border-right: solid 1px #ccc;
+	padding-left: 0;
+	color: #888;
+}
+.form-control:focus {
+	box-shadow: none;
+}
+#contact .form-control {
+	margin: 2rem 0 7rem 0;
+}
 section {
 	min-height: 100%;
 	padding-top: 8rem;
@@ -149,6 +166,7 @@ section {
 	padding: 1.5rem 1.5rem 2rem 1.5rem;
 	margin-top: 2rem;
 	text-align: center;
+	border-radius: 2px;
 }
 .portfolio-item  img{
 	margin: 1.8rem 0;
